--- a/cookierun/templates/main.html
+++ b/cookierun/templates/main.html
@@ -3,7 +3,8 @@
 {% block container %}
 <div class="top-pad">
 
-<h1>Hello World !</h1>
+<h1>CookieRunner <small>run to eat your favorite cookies !</small></h1>
+
 
 </div>
 {% endblock %}
