Better solution for pages that require additional javascripts

--- a/cookierun/templates/base.html
+++ b/cookierun/templates/base.html
@@ -24,6 +24,6 @@
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-<script src="{{ url_for('static', filename='js/upload.js') }}"></script>
+{% block extrajs %}{% endblock %}
 </body>
 </html>
