--- a/cookierun/templates/upload.html
+++ b/cookierun/templates/upload.html
@@ -24,3 +24,7 @@
 
 </div>
 {% endblock %}
+
+{% block extrajs %}
+<script src="{{ url_for('static', filename='js/upload.js') }}"></script>
+{% endblock %}
