minified upload.js

--- a/cookierun/templates/upload.html
+++ b/cookierun/templates/upload.html
@@ -26,5 +26,5 @@
 {% endblock %}
 
 {% block extrajs %}
-<script src="{{ url_for('static', filename='js/upload.js') }}"></script>
+<script src="{{ url_for('static', filename='js/upload.min.js') }}"></script>
 {% endblock %}
