More work on templates, fixed a bug in the gpx parser and upload controller now catches double entries.

--- a/cookierun/templates/main.html
+++ b/cookierun/templates/main.html
@@ -5,6 +5,10 @@
 
 <h1>CookieRunner <small>run to eat your favorite cookies !</small></h1>
 
+<div class="row text-center">
+    <a href="{{ url_for('upload.upload_screen') }}" class="btn btn-primary"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> Upload a GPX file now</a>
+
+</div>
 
 </div>
 {% endblock %}
