--- a/cookierun/templates/base.html
+++ b/cookierun/templates/base.html
@@ -12,7 +12,7 @@
         <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">CookieRunner</a>
+                    <a class="navbar-brand" href="{{ url_for('main.main_screen') }}">CookieRunner</a>
                 </div>
             </div>
         </div>
