--- a/cookierun/templates/register.html
+++ b/cookierun/templates/register.html
@@ -2,12 +2,14 @@
 
 {% block container %}
 <div class="top-pad">
+    <h1>CookieRunner: Register</h1>
     <form method="POST" action="{{ url_for('auth.register') }}" role="form">
         {{ form.csrf_token }}
-        <div class="form-group">{{ form.username.label }}: {{ form.username() }}</div>
-        <div class="form-group">{{ form.password.label }}: {{ form.password() }}</div>
-        <div class="form-group">{{ form.confirm.label }}: {{ form.confirm() }}</div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <div class="form-group">{{ form.username.label }}: {{ form.username(class_="form-control") }}</div>
+        <div class="form-group">{{ form.password.label }}: {{ form.password(class_="form-control") }}</div>
+        <div class="form-group">{{ form.confirm.label }}: {{ form.confirm(class_="form-control") }}</div>
+        <div class="form-group">{{ form.email.label }}: {{ form.email(class_="form-control") }}</div>
+        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
 {% endblock %}
