--- a/cookierun/static/css/main.css
+++ b/cookierun/static/css/main.css
@@ -38,3 +38,9 @@ input[readonly] {
   background-color: white !important;
   cursor: text !important;
 }
+
+.glyphicon-large {
+    font-size: 12em;
+    opacity: 0.2;
+    padding-bottom: 10px;
+}
