--- a/cookierun/templates/base.html
+++ b/cookierun/templates/base.html
@@ -10,9 +10,33 @@
     </head>
     <body>
         <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                      <span class="sr-only">Toggle navigation</span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                    </button>
                     <a class="navbar-brand" href="{{ url_for('main.main_screen') }}">CookieRunner</a>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="dropdown">
+                            {% if current_user.is_authenticated() %}
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user"></span> <strong>{{ current_user.username }}</strong></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="{{ url_for('auth.logout') }}">Log out</a></li>
+                            </ul>
+                            {% else %}
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Not logged in!</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="{{ url_for('auth.login') }}">Log in</a></li>
+                                <li><a href="{{ url_for('auth.register') }}">Register</a></li>
+                            </ul>
+                            {% endif %}
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
