--- a/cookierun/templates/login.html
+++ b/cookierun/templates/login.html
@@ -2,12 +2,22 @@
 
 {% block container %}
 <div class="top-pad">
-    <h1>CookieRunner: Log In</h1>
-    <form method="POST"  action="{{ url_for('auth.login') }}"  role="form">
-    {{ form.csrf_token }}
-        <div class="form-group">{{ form.username.label }}: {{form.username(class_="form-control") }}</div>
-        <div class="form-group">{{ form.password.label }}: {{form.password(class_="form-control") }}</div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    <br />
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4 col-xs-12">
+            <div class="panel panel-default">
+                <div class="panel-heading"><strong>Log in ...</strong></div>
+                <div class="panel-body">
+                    <form method="POST"  action="{{ url_for('auth.login') }}"  role="form">
+                    {{ form.csrf_token }}
+                        <div class="form-group">{{ form.username.label }}: {{form.username(class_="form-control") }}</div>
+                        <div class="form-group">{{ form.password.label }}: {{form.password(class_="form-control") }}</div>
+                        <div class="form-group">{{ form.keep_logged.label }} {{form.keep_logged(checked=True) }}</div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
