--- a/cookierun/templates/routes.html
+++ b/cookierun/templates/routes.html
@@ -4,51 +4,59 @@
 <div class="top-pad">
 
     {% if routes %}
-        <h1>Routes in the database</h1>
+        <div class="row">
+            <div class="col-xs-12">
+                <h1>Routes in the database</h1>
 
-        <ul>
-            {% for route in routes %}
-                <li><a href="{{ url_for('routes.routes_view', route_id=route.id) }}">Route {{ route.id }}</a> (added {{ route.added }})</li>
-            {% else %}
-                <li>No routes found in the database!</li>
-            {% endfor %}
-        </ul>
-
+                <ul>
+                    {% for route in routes %}
+                        <li><a href="{{ url_for('routes.routes_view', route_id=route.id) }}">Route {{ route.id }}</a> (added {{ route.added }})</li>
+                    {% else %}
+                        <li>No routes found in the database!</li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
     {% endif %}
 
     {% if route %}
-        <h1>Route {{ route.id }} <small>(added {{ route.added }})</small></h1>
+        <div class="row">
+            <div class="col-xs-12">
+                <h1>Route {{ route.id }} <small>(added {{ route.added }})</small></h1>
 
-        <div class="panel panel-default">
-            <div class="panel-body">
-                <div class="row">
-                    <div class="col-lg-3 col-xs-2 text-center">
-                        Distance
-                        <h2>{{ route.distance|round(1) }} <small>km</small></h2>
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-lg-3 col-xs-2 text-center">
+                                Distance
+                                <h2>{{ route.distance|round(1) }} <small>km</small></h2>
+                            </div>
+                            <div class="col-lg-3 col-xs-2 text-center">
+                                Speed
+                                <h2>{{ route.speed|round(1) }} <small>km/h</small></h2>
+                            </div>
+                            <div class="col-lg-3 col-xs-2 text-center">
+                                Duration
+                                <h2>{{ (route.duration//3600)|int }}:{{ ((route.duration % 3600)//60)|int }}:{{ (route.duration%60)|int }}</h2>
+                            </div>
+                            <div class="col-lg-3 col-xs-2 text-center">
+                                Calories
+                                <h2>{{ route.calories|round(1) }} <small>Cal</small></h2></div>
+                        </div>
                     </div>
-                    <div class="col-lg-3 col-xs-2 text-center">
-                        Speed
-                        <h2>{{ route.speed|round(1) }} <small>km/h</small></h2>
-                    </div>
-                    <div class="col-lg-3 col-xs-2 text-center">
-                        Duration
-                        <h2>{{ (route.duration//3600)|int }}:{{ ((route.duration % 3600)//60)|int }}:{{ (route.duration%60)|int }}</h2>
-                    </div>
-                    <div class="col-lg-3 col-xs-2 text-center">
-                        Calories
-                        <h2>{{ route.calories|round(1) }} <small>Cal</small></h2></div>
                 </div>
-
             </div>
         </div>
         <div class="row">
-        <div class="form-group col-md-6 col-xs-12">
-            <label for="sel1">Which cookies would you like to eat?</label>
-            <select class="cookielist form-control" id="sel1">
-                <option>Select cookie...</option>
-            </select>
-        </div>
-        <div class="well col-md-6 col-xs-12" id="result">Select a cookie to see how many you can eat !</div>
+            <div class="form-group col-md-6 col-xs-12">
+                <label for="sel1">Which cookies would you like to eat?</label>
+                <select class="cookielist form-control" id="sel1">
+                    <option>Select cookie...</option>
+                </select>
+            </div>
+            <div class="col-md-6 col-xs-12" >
+                <div class="well" id="result">Select a cookie to see how many you can eat !</div>
+            </div>
         </div>
     {% endif %}
 </div>
@@ -69,7 +77,7 @@
         $("#sel1").on("change", function() {
             $(this).find('option:first-child').prop("disabled",true);
             count = counts[$(this).val()];
-            if(count == 0) {
+            if(count == 1) {
                 $("#result").text("You can eat " + count + " " + $(this).val() + " cookie !")
             } else {
                 $("#result").text("You can eat " + count + " " + $(this).val() + " cookies !")
