--- a/cookierun/templates/base.html
+++ b/cookierun/templates/base.html
@@ -27,6 +27,10 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user"></span> <strong>{{ current_user.username }}</strong></a>
                             <ul class="dropdown-menu">
                                 <li><a href="{{ url_for('auth.logout') }}">Log out</a></li>
+                                {% if current_user.is_administrator() %}
+                                <li role="separator" class="divider"></li>
+                                <li><a href="admin">Admin panel</a></li>
+                                {% endif %}
                             </ul>
                             {% else %}
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Not logged in!</a>
