--- a/cookierun/templates/login.html
+++ b/cookierun/templates/login.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-md-4 col-md-offset-4 col-xs-12">
             <div class="panel panel-default">
-                <div class="panel-heading"><strong>Log in ...</strong></div>
+                <div class="panel-heading"><strong>Log in</strong></div>
                 <div class="panel-body">
                     <form method="POST"  action="{{ url_for('auth.login') }}"  role="form">
                     {{ form.csrf_token }}
