--- a/cookierun/templates/main.html
+++ b/cookierun/templates/main.html
@@ -3,43 +3,43 @@
 {% block container %}
 <div class="top-pad">
 
-<h1>CookieRunner <small>run to eat your favorite cookies !</small></h1>
+    <h1>CookieRunner <small>run to eat your favorite cookies !</small></h1>
 
-<div class="row">
+    <div class="row">
 
     {% if stats %}
         <div class="col-xs-12">
             <div class="panel panel-default">
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-lg-3 col-xs-2 text-center">
+                            <div class="col-md-3 col-xs-6 text-center">
                                 Activities
                                 <h2>{{ stats.count }}</h2>
                             </div>
-                            <div class="col-lg-3 col-xs-2 text-center">
+                            <div class="col-md-3 col-xs-6 text-center">
                                 Total Distance
                                 <h2>{{ stats.total_distance|round(1) }} <small>km</small></h2>
                             </div>
-                            <div class="col-lg-3 col-xs-2 text-center">
+                            <div class="col-md-3 col-xs-6 text-center">
                                 Total Duration
-                                <h2>{{ (stats.total_duration//3600)|int }}:
-                                    {{ ((stats.total_duration % 3600)//60)|int }}:
-                                    {{ (stats.total_duration%60)|int }}</h2>
+                                <h2>{{ stats.total_hours }}:{{ stats.total_minutes }}:{{ stats.total_seconds }}</h2>
                             </div>
-                            <div class="col-lg-3 col-xs-2 text-center">
+                            <div class="col-md-3 col-xs-6 text-center">
                                 Total Calories
-                                <h2>{{ stats.total_calories|round(1) }} <small>Cal</small></h2></div>
+                                <h2>{{ stats.total_calories|round(1) }} <small>Cal</small></h2>
+                            </div>
                         </div>
                     </div>
                 </div>
+            <a href="{{ url_for('upload.upload_screen') }}" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add another run</a>
+
             </div>
+    {% else %}
+        <div class="col-md-4 col-md-offset-4 col-xs-12 text-center">
+            <a href="{{ url_for('upload.upload_screen') }}"><span class="glyphicon glyphicon-upload glyphicon-large" aria-hidden="true"></span></a><br/>
+            <a href="{{ url_for('upload.upload_screen') }}" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> Upload a GPX file now</a>
         </div>
-
     {% endif %}
-
-    <div class="col-md-4 col-md-offset-4 col-xs-12 text-center">
-        <a href="{{ url_for('upload.upload_screen') }}"><span class="glyphicon glyphicon-upload glyphicon-large" aria-hidden="true"></span></a><br/>
-        <a href="{{ url_for('upload.upload_screen') }}" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> Upload a GPX file now</a>
     </div>
 </div>
 
