--- a/cookierun/templates/routes.html
+++ b/cookierun/templates/routes.html
@@ -5,16 +5,23 @@
 
     {% if routes %}
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-12 col-md-6">
                 <h1>Routes in the database</h1>
 
-                <ul>
-                    {% for route in routes %}
-                        <li><a href="{{ url_for('routes.routes_view', route_id=route.id) }}">Route {{ route.id }}</a> (added {{ route.added }})</li>
-                    {% else %}
-                        <li>No routes found in the database!</li>
-                    {% endfor %}
-                </ul>
+                <div class="panel panel-default">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr><td>Name</td><td>Date</td></tr>
+                            </thead>
+                            <tbody>
+                            {% for route in routes %}
+                                <tr><td><a href="{{ url_for('routes.routes_view', route_id=route.id) }}">Route {{ route.id }}</a></td><td>{{ route.added }}</td></tr>
+                            {% else %}
+                                <tr><td>No routes found in the database!</td></tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                </div>
             </div>
         </div>
     {% endif %}
@@ -27,19 +34,19 @@
                 <div class="panel panel-default">
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-lg-3 col-xs-2 text-center">
+                            <div class="col-md-3 col-xs-6 text-center">
                                 Distance
                                 <h2>{{ route.distance|round(1) }} <small>km</small></h2>
                             </div>
-                            <div class="col-lg-3 col-xs-2 text-center">
+                            <div class="col-md-3 col-xs-6 text-center">
                                 Speed
                                 <h2>{{ route.speed|round(1) }} <small>km/h</small></h2>
                             </div>
-                            <div class="col-lg-3 col-xs-2 text-center">
+                            <div class="col-md-3 col-xs-6 text-center">
                                 Duration
                                 <h2>{{ (route.duration//3600)|int }}:{{ ((route.duration % 3600)//60)|int }}:{{ (route.duration%60)|int }}</h2>
                             </div>
-                            <div class="col-lg-3 col-xs-2 text-center">
+                            <div class="col-md-3 col-xs-6 text-center">
                                 Calories
                                 <h2>{{ route.calories|round(1) }} <small>Cal</small></h2></div>
                         </div>
