--- a/cookierun/templates/base.html
+++ b/cookierun/templates/base.html
@@ -24,7 +24,7 @@
                     <ul class="nav navbar-nav">
                         <li class=""><a href="{{ url_for('upload.upload_screen') }}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add run</a></li>
                         {% if current_user.is_authenticated() %}
-                        <li class=""><a href="{{ url_for('routes.routes_user') }}"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> View runs</a></li>
+                        <li class=""><a href="{{ url_for('runs.runs_user') }}"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> View runs</a></li>
                         {% endif %}
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
